# projetrust

./: Cargo.toml  README.md
tp0/src/: main.rs
tp1/src/: main.rs
tp2/: Cargo.toml  fichier
tp2/src/: main.rs
tp3/: Cargo.toml
tp3/src/: client.rs  main.rs
tp7/: Cargo.toml  README.md
tp7/src/: client.rs  main.rs
tp8/: Cargo.toml
tp8/src/: lib.rs  protocole.rs
tp9/: Cargo.toml  README.md
