# Cargo.toml
[package]
name = "tp8" # Corrected package name
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] } # For asynchronous programming and networking
serde = { version = "1", features = ["derive"] } # For serialization/deserialization (Serialize and Deserialize traits)
serde_json = "1" # For JSON serialization/deserialization
chrono = { version = "0.4", features = ["serde"] } # For date and time handling, with Serde support
uuid = { version = "1.0", features = ["v4"] } # To generate unique IDs (UUID v4)

# Define our binaries
[[bin]]
name = "serveur" # Corrected binary name
path = "src/bin/serveur.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"